2005-12-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp.spec.in: Initial spec file prepared. Not yet included in
	the package.

	* itpp.pc.in: Cosmetic changes

	* dot/local/verification.doc: Updated with new information from
	testers

	* NEWS: Updated to reflect recent changes

	* itpp/base/transforms.cpp, tests/transforms_test.ref: Fixed bug
	[1388024]. Both versions of fft_real() and ifft_real() functions
	(based on FFTW3 and MKL) worked differently than the reference
	Matlab's fft()/ifft() functions. It seems to be fixed now, but an  
	additional code overhead was added.

2005-12-22  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* tests/gf2mat_test.cpp: New short test program for GF2mat class

2005-12-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/*.cpp, tests/*.ref: Fixed some of the test programs when
	IT++ uses the MKL. Real IFFT function gives incorrect results for
	MKL!!!

	* configure.ac: Updated version number to the upcomming final
	3.9.0 release

	* doc/local/index.doc.in: Added "What's New" links to the NEWS and
	ChangeLog files in the CVS

	* Makefile.am, doc/Makefile.am: Added `disthtml' target for
	preparing packages with HTML documentation

	* doc/sourceforge/howto_release_itpp.html: Updated the
	documentation

==============================================================================

2005-12-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.9.0-rc2 released (CVS tag: release-3-9-0-rc2)

2005-12-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/index.doc.in: Relative URL address replaced with a
	full one

	* itpp/config_msvc.h: Updated due to recent modifications of the
	configure.ac file. Undefined HAVE_CBLAS, HAVE_FFTW and
	HAVE_LAPACK, since HAVE_MKL is defined.

	* itpp/comm/error_counters.cpp, itpp/comm/error_counters.h:
	Changed `long' to `int', since they have the same size on most
	32-bit platforms. Fixed bugs in `if' statements (lack of casting
	to `short').
